<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_gradient"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/acme"
            android:text="@string/bill_please"
            android:textColor="#CD2FA6"
            android:textColorHighlight="#DF8A8A"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/amounttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:fontFamily="@font/acme"
            android:hint="@string/amount"
            android:inputType="text"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:autoSizeTextType="uniform" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:fontFamily="@font/acme"
            android:hint="@string/amount"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/paxtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:fontFamily="@font/acme"
            android:hint="@string/amount"
            android:text="PAX"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:autoSizeTextType="uniform" />

        <EditText
            android:id="@+id/pax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:fontFamily="@font/acme"
            android:hint="@string/number_of_pax"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/Discounttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:fontFamily="@font/acme"
            android:hint="Discount"
            android:inputType="text"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:autoSizeTextType="uniform" />
        <EditText
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:fontFamily="@font/acme"
            android:hint="@string/discount"
            android:inputType="text"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/acme"
            android:text="@string/add_ons"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/addons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/svc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:checked="false"
                android:textOff="@string/no_svc"
                android:textOn="@string/svc" />

            <ToggleButton
                android:id="@+id/gst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:checked="false"
                android:textOff="@string/no_gst"
                android:textOn="@string/gst" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pmethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/acme"
            android:text="@string/payment_method"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/PM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/pmCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/pmPaynow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/paynow" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/totalview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/acme"
        android:text="@string/total_bill"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/eachpayview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/amount_payable_per_pax"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/via"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/via"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split"
            android:textColorLink="#49454F"
            app:backgroundTint="#574E65" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/reset"
            app:backgroundTint="#574E65" />
    </LinearLayout>

</LinearLayout>
